testsuite/tests/parser/should_fail/RecordDotSyntaxFail3.stderr
RecordDotSyntaxFail3.hs:22:14: parse error on input ‘(’
